[gd_scene load_steps=4 format=3 uid="uid://c04xm3yl64w4c"]

[ext_resource type="Script" uid="uid://0p5jvyivruri" path="res://FD_Testing/New_Diloage_System/dialog_ui.gd" id="1_krsho"]
[ext_resource type="FontFile" uid="uid://b26qlchnc3w4o" path="res://FD_Testing/Fonts/PixelAE-Regular.ttf" id="2_ppxx5"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0chbd"]
bg_color = Color(0.141176, 0.431373, 0.74902, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.686275, 0.807843, 0.956863, 1)

[node name="DialogUi" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_krsho")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="CanvasLayer"]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -280.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_0chbd")

[node name="DialogBox" type="VBoxContainer" parent="CanvasLayer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="Dialog_Speaker" type="Label" parent="CanvasLayer/Panel/DialogBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.686275, 0.807843, 0.956863, 1)
theme_override_fonts/font = ExtResource("2_ppxx5")
theme_override_font_sizes/font_size = 20
text = "اسم اللاعب"
horizontal_alignment = 2

[node name="Dialog_Text" type="Label" parent="CanvasLayer/Panel/DialogBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_ppxx5")
theme_override_font_sizes/font_size = 23
text = "نجرب نجرب"
horizontal_alignment = 1

[node name="DialogOptions" type="HBoxContainer" parent="CanvasLayer/Panel/DialogBox"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="CloseButton" type="Button" parent="CanvasLayer/Panel"]
custom_minimum_size = Vector2(36, 36)
layout_mode = 0
offset_left = 6.0
offset_top = 6.0
offset_right = 42.0
offset_bottom = 42.0
theme_override_font_sizes/font_size = 20
text = "X"

[connection signal="pressed" from="CanvasLayer/Panel/CloseButton" to="." method="_on_close_button_pressed"]
